src/test/deca/syntax/parser/invalid/main_block_braces_not_open.deca
// Test de parser, les accolades du block dans main doivent être ouvertes


    int x = 5;
}